--- a/pages/Internet_marketing.html
+++ b/pages/Internet_marketing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение</title>
+    <title>Интернет-маркетинг</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -60,7 +60,7 @@
    
 <section class="sect1"> 
 
-    <h1>Полный практический курс интернет-маркетинга</h1>
+    <h1>Интернет-маркетинг</h1>
 
      <div>
         <div class="cont">
@@ -68,7 +68,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                <b>Кто такой интернет-маркетолог?</b> Специалист, который продвигает товар (услугу) в интернете, формирует и повышает положительную репутацию компании в целях увеличения объема продаж.
+                Интернет-маркетолог - специалист, который продвигает товар (услугу) в интернете, формирует и повышает положительную репутацию компании в целях увеличения объема продаж.
             </p></div>
         </div>
 
@@ -99,7 +99,7 @@
 <section class="sec-1">
     <h2>В ходе курса вы:</h2>
     <ul>
-        <li>Cможете продвигать свой сайт или интернет-магазин, не обращаясь в агентства.</li>
+        <li>Научитесь продвигать свой сайт или интернет-магазин, не обращаясь в агентства.</li>
         <li>Научитесь создавать продающие страницы и сайты на заказ.</li>
         <li>Перестанете "сливать" рекламные бюджеты на неэффективные каналы привлечения клиентов.</li>
         <li>Освоите SEO, SMM и контекстную рекламу в рамках одного, а не трех курсов.</li>
@@ -112,7 +112,7 @@
 <section class="sec-1">
 
     <div class="grid">
-        <a name="co"><h2>Программа курса «Полный практический курс интернет-маркетинга»</h2></a>
+        <a name="co"><h2>Программа курса</h2></a>
       <div id="course" class="js-ui-accordion"></div>
   
     </div>
