--- a/pages/business_analysis.html
+++ b/pages/business_analysis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение</title>
+    <title>Бизнес-анализ</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -46,7 +46,7 @@
    
 <section class="sect1"> 
 
-    <h1>Курс «Бизнес-анализ в сфере разработки ПО»</h1>
+    <h1>«Бизнес-анализ»</h1>
 
      <div>
         <div class="cont">
@@ -54,7 +54,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Кто такой бизнес-аналитик? Специалист, который исследует проблему заказчика, ищет решение и оформляет его концепцию в форме требований, на которые в дальнейшем будут ориентироваться разработчики при создании продукта.
+                Бизнес-аналитик - это Специалист, который исследует проблему заказчика, ищет решение и оформляет его концепцию в форме требований, на которые в дальнейшем будут ориентироваться разработчики при создании продукта.
             </p></div>
         </div>
 
