--- a/pages/freelance.html
+++ b/pages/freelance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гид по IT-профессиям</title>
+    <title>Удаленная работа или как зарабатывать, не выходя из дома</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -62,7 +62,7 @@
 
         <section class="sect1">
 
-            <h1>Гид по IT-профессиям</h1>
+            <h1>Удаленная работа или как зарабатывать, не выходя из дома</h1>
 
             <div>
                 <div class="cont">
@@ -73,10 +73,9 @@
                     <div><img src="../img/page_web_app/line11.svg" alt=""></div>
                     <div>
                         <p>
-                            Данный курс подойдет всем, кто:
-                            Хочет в IT, но не знает с чего начать.
-                            Желает развиваться в IT, но сомневается между несколькими направлениями.
-                            Является родителем и хочет помочь своему ребенку определиться с будущей профессией в IT.
+                            Развитие IT-технологий определяет профессии будущего, поэтому даже в кризис специалисты на
+                            удаленной работе не сидят без дела. И сейчас самое время научиться использовать современные
+                            технологии и начать на этом зарабатывать.
                         </p>
                     </div>
                 </div>
@@ -113,13 +112,12 @@
 
 
         <section class="sec-1">
-            <h2>В ходе курса вы:</h2>
+            <h2>На курсе «Удаленная работа или как зарабатывать, не выходя их дома» вы узнаете:</h2>
             <ul>
-                <li>Получите базовые знания по основным IT-направлениям.</li>
-                <li>Получите понимание рынка труда в сфере IT (спрос на отдельных специалистов, уровни заработной платы,
-                    карьерные возможности и т.д.).</li>
-                <li>Поймете в каком направлении в IT вы хотите развиваться дальше.</li>
-
+                <li>как найти свое место в IT-сфере;</li>
+                <li>какие существуют каналы поиска удаленной работы;</li>
+                <li>как подготовить «цепляющее» резюме;</li>
+                <li>как проявить себя на собеседовании.</li>
             </ul>
         </section>
 
@@ -129,7 +127,7 @@
 
             <div class="grid">
                 <a name="co">
-                    <h2>Программа курса «Гид по IT-профессиям»</h2>
+                    <h2>Программа курса по трудоустройству:</h2>
                 </a>
                 <div id="course" class="js-ui-accordion"></div>
 
@@ -212,20 +210,20 @@
         </div>
     </footer>
 
-
     <div id="upward">
         <div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../libs/side_menu.js"></script>
     <script src="../libs/app.js"></script>
 
-    <script src="../libs/guide_to_it.js"></script>
+    <script src="../libs/coding_php.js"></script>
     <!-- Для гармошки -->
-
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+
     <script src="../libs/garm.js"></script>
-    <script src="../libs/side_menu.js"></script>
 
 
     <!-- Для гармошки -->
