--- a/pages/it-hr.html
+++ b/pages/it-hr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение</title>
+    <title>Курс «IT-HR»</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -68,7 +68,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Кто такой IT-HR? IT-HR — это специалист, деятельность которого объединяет IT-рекрутинг и HR-менеджмент. IT-HR работает с коллективом компании, развивает корпоративную культуру, помогает адаптироваться новым коллегам.
+                IT-HR — это специалист, деятельность которого объединяет IT-рекрутинг и HR-менеджмент. IT-HR работает с коллективом компании, развивает корпоративную культуру, помогает адаптироваться новым коллегам.
             </p></div>
         </div>
 
@@ -97,13 +97,12 @@
 
 
 <section class="sec-1">
-    <h2>Основные задачи курса</h2>
+    <h2>В ходе курса вы:</h2>
     <ul>
         <li>Разобраться с основными понятиями и терминами IT-рекрутинга.</li>
-        <li>Освоить технологии и методы подбора персонала</li>
         <li>Изучить алгоритмы адаптации новых сотрудников</li>
+        <li>Освоить технологии и методы подбора персонала</li>
         <li>Узнать, как управлять эффективностью персонала</li>
-        <li>Ознакомиться с понятиями «HR-бренд компании» и «HR-бренд рекрутера»</li>
     </ul>
 </section>
 
