--- a/pages/it_accountant.html
+++ b/pages/it_accountant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT-Юрист</title>
+    <title>IT-БУХГАЛТЕР</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -27,6 +27,7 @@
     <nav id="burgerMenu"><img id="burg_icon" src="../img/burger_menu.svg" alt="">
     </nav>
 </div>
+
 
 <div class="burg1">
     <div>
@@ -59,14 +60,16 @@
    
 <section class="sect1"> 
 
-    <h1>«IT-Юрист»</h1>
+    <h1>IT-БУХГАЛТЕР</h1>
 
      <div>
         <div class="cont">
             <div><img src="../img/page_web_app/almaz.png" alt=""> <p> Владимир Минский
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
-            <div><p>Курс для тех, кто хочет, не меняя профессию юриста, работать в сфере IT</p></div>
+            <div><p>
+                Курс для тех, кто хочет, не меняя профессию бухгалтера, работать в сфере IT
+            </p></div>
         </div>
 
         <div class="cont1">
@@ -96,15 +99,13 @@
 <section class="sec-1">
     <h2>В ходе курса вы узнаете:</h2>
     <ul>
-        <li>Особенности работы юриста в IT- компании;</li>
-        <li>Как правильно внедрить в компании частный блокчейн-проект, какими нормами права необходимо руководствоваться;</li>
-        <li>Особенности разработки договоров на создание ПО как для разработчиков, так и для заказчиков;</li>
-        <li>Что такое ICO: особенности правового сопровождения;</li>
-        <li>Как происходит юридическое сопровождение смарт-контрактов;</li>
-        <li>Cудебную практику по спорам в IT-сфере;</li>
-        <li>Как установить режим коммерческой тайны в организации;</li>
-        <li>Как не допустить разглашения ценной информации;</li>
-        <li>Тонкости заключения NDA соглашения.</li>
+        <li>Какие особенности бухгалтерского и налогового учета в компаниях IT сферы.</li>
+        <li>Как правильно учитывать интеллектуальную собственность, созданную работниками компании.</li>
+        <li>Какие особенности заработной платы в IT сфере.</li>
+        <li>Как подготовиться к вступлению в ПВТ, нюансы переходного периода.</li>
+        <li>Нюансы внешнеэкономической деятельности в сфере IT.</li>
+        <li>Льготы для резидентов ПВТ и особенности оптимизации налогообложения в IT.</li>
+        <li>Лайфхаки и кейсы от практикующих специалистов.</li>
     </ul>
 </section>
 
@@ -200,7 +201,7 @@
 
 <script src="../libs/app.js"></script>
 
-<script src="../libs/it_jurist.js"></script>
+<script src="../libs/it-hr.js"></script>
 <!-- Для гармошки -->
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
