--- a/pages/product_management.html
+++ b/pages/product_management.html
@@ -68,7 +68,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Кто такой product-менеджер? Специалист, который отвечает за концепцию продукта, запуск, вовлечение пользователей и монетизацию продукта. Хороший менеджер продукта — это ответственный мини-гендиректор продукта.
+                Product manager - это специалист, который отвечает за концепцию продукта, запуск, вовлечение пользователей и монетизацию продукта. Хороший менеджер продукта — это ответственный мини-гендиректор продукта.
             </p></div>
         </div>
 
