--- a/pages/project_management.html
+++ b/pages/project_management.html
@@ -60,7 +60,7 @@
    
 <section class="sect1"> 
 
-    <h1>Курс «Управление проектами в сфере разработки ПО»</h1>
+    <h1>Курс «Управление проектами»</h1>
 
      <div>
         <div class="cont">
@@ -68,7 +68,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Кто такой менеджер проекта? Специалист, отвечающий за успешное выполнение проекта: в указанные заказчиком сроки, с необходимым качеством, при фиксированном бюджете, ограниченных человеческих ресурсах и в соответствии с требованиями со стороны заказчика.
+                Менеджер проекта - это Специалист, отвечающий за успешное выполнение проекта: в указанные заказчиком сроки, с необходимым качеством, при фиксированном бюджете, ограниченных человеческих ресурсах и в соответствии с требованиями со стороны заказчика.
             </p></div>
         </div>
 
@@ -99,9 +99,9 @@
 <section class="sec-1">
     <h2>В ходе курса Вы:</h2>
     <ul>
-        <li>Рассмотрите этапы и рабочие потоки процесса разработки ПО.</li>
+        <li>Рассмотрите этапы процесса разработки ПО.</li>
         <li>Узнаете о месте и роли руководителя проекта в процессе разработки ПО.</li>
-        <li>Постигнете сущность методик решения проблем, возникающих в процессе разработки ПО.</li>
+        <li>Научитесь решать проблемы, возникающие в процессе разработки ПО.</li>
         <li>Овладеете навыками работы с современными инструментами управления проектами.</li>
 </section>
 
