--- a/pages/projects.html
+++ b/pages/projects.html
@@ -138,15 +138,15 @@
 
 
 <section class="sec1">
-    <a name="p3"><h1>Быхов туристический</h1></a>
+    <a name="p3"><h1>Веб-сайт и приложение "Быхов туристический"</h1></a>
 </section>
 <section class="sec1">
     <div class="proj">
         <div class="lf lf2">
             <p class="b">О проекте "Быхов туристический" </p>
-            <p class="p3"><a href="#">В каталог агроусадеб входят все самые знаменитые агроусадьбы региона.
-                Это то, что делает эту землю такой
-                прекрасной, удивительной и бла-бла-бла.</a></p>
+            <p class="p3"><a href="#">
+                Проект по созданию веб-сайта и приложения «Быхов туристический» расскажет о достопримечательностях Быховского района и привлечет туристов различных направлений. Это поможет развить туристический бизнес и даст толчок к совершенствованию инфраструктуры региона.
+            </a></p>
                 <div class="card_arrow"><a href="#"><img src="../img/arrow10.svg" alt=""></a></div>
             </div>
         <div class="rt"><img src="../img/p3.png" alt=""></div>
@@ -155,24 +155,27 @@
 </section>
 
 <section class="sec1">
-    <p class="p1">Наверное, чтобы описать этот проект, нужно немноге себе представлять, 
-        о чем он. Неплохо бы иметь немножко инфы, чуть фоток, а еще лучше - целый документ.</p>
-<p class="p2">Наверное, у кого-то когда-то это все будет. Возможно, мы все переживем короновирус и тогда радостно наполним этот раздел содержанием, отличным от вот этого вот текста.</p>
+    <p class="p1">
+        Приложение представляет собой карту региона с самыми интересными достопримечательностями. Вы сможете узнать подробнее про каждый объект, а также составить маршрут путешествия по региону.
+    </p>
+<p class="p2">
+    А красочный видеоролик познакомит туристов с самыми живописными местами Быхова и района.
+</p>
 </section>
 
 
 
 
 <section class="sec1">
-    <a name="p4"><h1>Быхов велосипедный</h1></a>
+    <a name="p4"><h1>Приложение с авторским веломаршрутом по Быховскому району</h1></a>
 </section>
 <section class="sec1">
     <div class="proj">
         <div class="lf lf3">
             <p class="b">О проекте "Быхов велосипедный" </p>
-            <p class="p3"><a href="#">В каталог агроусадеб входят все самые знаменитые агроусадьбы региона.
-                Это то, что делает эту землю такой
-                прекрасной, удивительной и бла-бла-бла.</a></p>
+            <p class="p3"><a href="#">
+                Проект по созданию приложения с авторским веломаршрутом по Быховскому району направлен на популяризацию велотуризма в регионе и способствует активному развитию туристической сферы.
+            </a></p>
                 <div class="card_arrow"><a href="#"><img src="../img/arrow10.svg" alt=""></a></div>
             </div>
        
@@ -182,9 +185,8 @@
 </section>
 
 <section class="sec1">
-    <p class="p1">Наверное, чтобы описать этот проект, нужно немноге себе представлять, 
-        о чем он. Неплохо бы иметь немножко инфы, чуть фоток, а еще лучше - целый документ.</p>
-<p class="p2">Наверное, у кого-то когда-то это все будет. Возможно, мы все переживем короновирус и тогда радостно наполним этот раздел содержанием, отличным от вот этого вот текста.</p>
+    <p class="p1">Приложение включает в себя авторский веломаршрут, составленный при поддержки краеведческого музея Быхова.</p>
+<p class="p2">Теперь каждый житель и гость города сможет открыть для себя удивительные красоты природы и неизведанные уголки быховского района</p>
 </section>
 
 
