--- a/pages/software_testing.html
+++ b/pages/software_testing.html
@@ -60,7 +60,7 @@
    
 <section class="sect1"> 
 
-    <h1>Курс «Тестирование программного обеспечения»</h1>
+    <h1>Тестирование ПО</h1>
 
      <div>
         <div class="cont">
@@ -68,8 +68,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Кто такой тестировщик ПО?
-Специалист, который занимается обеспечением высокого качества IT-проектов (сайтов, мобильных приложений и пр.), поиском ошибок и сбоев в их работе. Тестировщик моделирует различные ситуации, которые могут возникнуть в процессе использования предмета тестирования, чтобы разработчики смогли исправить обнаруженные ошибки.
+                Тестировщик - это специалист, который занимается обеспечением высокого качества IT-проектов (сайтов, мобильных приложений и пр.), поиском ошибок и сбоев в их работе. Тестировщик моделирует различные ситуации, которые могут возникнуть в процессе использования предмета тестирования, чтобы разработчики смогли исправить обнаруженные ошибки.
             </p></div>
         </div>
 
