--- a/pages/web_design.html
+++ b/pages/web_design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гид по IT-профессиям</title>
+    <title>Основы Web-дизайна</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -30,6 +30,7 @@
         <nav id="burgerMenu"><img id="burg_icon" src="../img/burger_menu.svg" alt="">
         </nav>
     </div>
+
 
     <div class="burg1">
         <div>
@@ -62,8 +63,7 @@
 
         <section class="sect1">
 
-            <h1>Гид по IT-профессиям</h1>
-
+            <h1>Основы Web-дизайна</h1>
             <div>
                 <div class="cont">
                     <div><img src="../img/page_web_app/almaz.png" alt="">
@@ -73,10 +73,13 @@
                     <div><img src="../img/page_web_app/line11.svg" alt=""></div>
                     <div>
                         <p>
-                            Данный курс подойдет всем, кто:
-                            Хочет в IT, но не знает с чего начать.
-                            Желает развиваться в IT, но сомневается между несколькими направлениями.
-                            Является родителем и хочет помочь своему ребенку определиться с будущей профессией в IT.
+                            О чем этот курс:
+                        </p>
+                        <p>
+                            Курс рассчитан на новичков в дизайне, а также людей, которые имеют выборочные знания в
+                            области проектирования интерфейсов. Высокая информационная плотность материала позволяет
+                            получить все необходимые базовые навыки, чтобы создавать собственный дизайн для мобильных
+                            приложений и сайтов.
                         </p>
                     </div>
                 </div>
@@ -113,13 +116,14 @@
 
 
         <section class="sec-1">
-            <h2>В ходе курса вы:</h2>
+            <h2>Вы узнаете:</h2>
             <ul>
-                <li>Получите базовые знания по основным IT-направлениям.</li>
-                <li>Получите понимание рынка труда в сфере IT (спрос на отдельных специалистов, уровни заработной платы,
-                    карьерные возможности и т.д.).</li>
-                <li>Поймете в каком направлении в IT вы хотите развиваться дальше.</li>
-
+                <li>Кто такой UX/UI дизайнер</li>
+                <li>Что нужно знать, чтобы стать дизайнером</li>
+                <li>С чего начинается любой проект</li>
+                <li>Как сделать хороший дизайн</li>
+                <li>Из каких этапов состоит процесс создания интерфейса</li>
+                <li>Как искать свою первую работу дизайнером</li>
             </ul>
         </section>
 
@@ -129,7 +133,7 @@
 
             <div class="grid">
                 <a name="co">
-                    <h2>Программа курса «Гид по IT-профессиям»</h2>
+                    <h2>Программа курса</h2>
                 </a>
                 <div id="course" class="js-ui-accordion"></div>
 
@@ -219,16 +223,15 @@
 
     <script src="../libs/app.js"></script>
 
-    <script src="../libs/guide_to_it.js"></script>
+    <script src="../libs/it-hr.js"></script>
     <!-- Для гармошки -->
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
     <script src="../libs/garm.js"></script>
-    <script src="../libs/side_menu.js"></script>
-
 
     <!-- Для гармошки -->
+    <script src="../libs/side_menu.js"></script>
 
     <script>
         function startres() {
