--- a/pages/news_1.html
+++ b/pages/news_1.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Курсы</title>
+    <title>Программа «Быхов инновационный» получила грант!</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/education.css">
-    <link rel="stylesheet" href="../css/forrms.css">
+    <link rel="stylesheet" href="../css/news_on_img.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -29,6 +28,20 @@
         </nav>
     </div>
 
+    <div class="burg1">
+        <div>
+            <img src="../img/close.svg" alt="">
+        </div>
+        <div id="bMenu">
+        </div>
+        <div class="social msocial">
+            <a href="#"><img src="../img/s1.svg" alt=""></a>
+            <a href="#"><img src="../img/s2.svg" alt=""></a>
+            <a href="#"><img src="../img/s3.svg" alt=""></a>
+            <a href="#"><img src="../img/s4.svg" alt=""></a>
+        </div>
+    </div>
+
     <aside id="side">
         <div id="side_cont">
             <div id="logo_pages"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
@@ -43,95 +56,41 @@
     </aside>
 
     <main id="mainCont">
-
-        <section class="sec1">
-            <div>
-                <h1>Курсы</h1>
+        <section class="news_on_img">
+            <div class="news_on_img__title">
+                <h1>Программа «Быхов инновационный» получила грант!</h1>
                 <img id="vline1" src="../img/line1.svg" alt="">
             </div>
-            <div>
+            <div class="news_on_img__content">
+                <img src="../img/news_on_img/news_on_img.svg" alt="">
+                <div class="news_on_img__citat">
+                    <p>
+                        Информационно-просветительское учреждение в сфере предпринимательства «Центр поддержки и
+                        развития частных бизнес-инициатив» стало победителем в конкурсе, который был объявлен в рамках
+                        проекта ЕС-ПРООН «Поддержка экономического развития на местном уровне в Республике Беларусь».
+                    </p>
+                </div>
+                <h2>Быхов инновационный</h2>
                 <p>
-                    Станьте востребованным специалистом, изучив понравившуюся IT-специальность на наших курсах абсолютно
-                    бесплатно. Наши преподаватели – практикующие специалисты IT-сферы помогут вам получить все
-                    необходимые навыки для поиска будущей работы.
+                    «Быхов инновационный» - название инициативы, идеей которой является создание структуры поддержки
+                    малого и среднего предпринимательства в Быхове – бизнес-инкубатора. Он станет площадкой для обучения
+                    населения района, в особенности молодежи, IT и интернет-технологиям для создания и продвижения
+                    бизнеса, стартапов и инновационных компаний, а также для поддержки, консультирования, сопровождения
+                    и помощи в поиске финансирования начинающих предпринимателям, повышения конкурентоспособности
+                    действующих МСП Быховского района.
+                    Наши эксперты, имеющие многолетний опыт в сфере IT-образования, инновационные программы развития
+                    высокотехнологичного бизнеса и стартап-движения, проведут серию обучающих и информационных
+                    мероприятий для начинающих и действующих предпринимателей.
+                    Мы ждем активных жителей Быховского района, желающих обучаться, создавать и развивать свой бизнес!
+
                 </p>
-
             </div>
-
-        </section>
-
-        <section class="sec1">
-            <h2>Чему вы хотите учиться?</h2>
-            <div id="tgs">
-                <script src="../libs/edu_menu.js"></script>
+            <div class="button__back">
+                <a href="news.html">
+                    <img src="../img/left-arrow10.svg" alt="row-left">
+                    <span>назад к списку новостей</span>
+                </a>
             </div>
-        </section>
-
-
-        <section class="sec1">
-            <h2>Наши замечательные преподаватели</h2>
-        </section>
-
-        <section id="car1" class="sec1 card"> </section>
-
-        <section class="sec1">
-            <a name="e1">
-                <h2>Управление и бизнес анализ</h2>
-            </a>
-        </section>
-
-        <section id="car2" class="sec1 card"> </section>
-
-        <section id="car2_1" class="sec1 card"> </section>
-
-
-        <section class="sec1">
-            <a name="e3">
-                <h2>Разработка и тестирование ПО </h2>
-            </a>
-        </section>
-
-        <section id="car4" class="sec1 card"> </section>
-
-        <section id="car5" class="sec1 card"> </section>
-
-
-        <section class="sec1">
-            <a name="e4">
-                <h2>Курсы-интенсивы</h2>
-            </a>
-        </section>
-
-        <section id="car6" class="sec1 card"> </section>
-
-
-        <section class="sec1">
-            <a name="e6">
-                <h2>Маркетинг и продажи </h2>
-            </a>
-        </section>
-
-        <section id="car8" class="sec1 card"> </section>
-
-
-
-        <section class="sec3">
-            <div id="f1">
-                <h2>Напишите нам и мы свяжемся с вами</h2>
-                <form action="#">
-                    <input type="text" name="fname" placeholder="Ваше имя">
-                    <input type="email" name="eml" placeholder="Ваш e-mail">
-                    <textarea name="mess" placeholder="Текст комментария"></textarea>
-                    <input type="submit" value="Отправить">
-                </form>
-            </div>
-            <div id="f2">
-                <img src="../img/house.svg" alt="">
-                <p>+ 375 39 34 45 43</p>
-                <p>info@inby.by</p>
-                <p>Быхов, ул. Краснознаменная, 65</p>
-            </div>
-
         </section>
     </main>
     <footer id="foot0">
@@ -152,19 +111,6 @@
         </div>
     </footer>
 
-    <div class="burg1">
-        <div>
-            <img src="../img/close.svg" alt="">
-        </div>
-        <div id="bMenu">
-        </div>
-        <div class="social msocial">
-            <a href="#"><img src="../img/s1.svg" alt=""></a>
-            <a href="#"><img src="../img/s2.svg" alt=""></a>
-            <a href="#"><img src="../img/s3.svg" alt=""></a>
-            <a href="#"><img src="../img/s4.svg" alt=""></a>
-        </div>
-    </div>
 
     <div id="upward">
         <div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div>
@@ -172,8 +118,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../libs/side_menu.js"></script>
-    <script src="../libs/education.js"></script>
-
 
     <script>
         function startres() {
@@ -207,8 +151,8 @@
                 foot0.style.marginLeft = '60px';
                 foot1.style.width = '220px';
                 foot2.style.marginLeft = '0';
-                f1.style.width = '54%';
-                f2.style.width = '23%';
+                //   f1.style.width = '54%';
+                //   f2.style.width = '23%';
 
             } else {
                 side.style.width = '375px';
@@ -216,8 +160,8 @@
                 foot0.style.marginLeft = '160px';
                 foot1.style.width = '146px';
                 foot2.style.marginLeft = '176px';
-                f1.style.width = '64%';
-                f2.style.width = '18%';
+                // f1.style.width = '64%';
+                // f2.style.width = '18%';
 
             }
 
@@ -250,23 +194,7 @@
         }
     </script>
 
-    <div id="mydiv0">
-        <div id="myform0" class="forrms">
-            <img onclick="mydiv0.style.display = 'none'" src="../img/esc.svg" alt="exit">
-            <h2>Напишите нам и мы свяжемся с вами</h2>
-            <form action="serv.php">
-                <input type="name" name="name" placeholder="Ваше имя" required>
-                <input type="email" name="eml" placeholder="Ваш e-mail" required>
-                <input type="tel" name="tel" placeholder="Ваш номер телефона" required>
-                <p>+375 xx xxx xx xx</p>
-                <textarea name="mess" placeholder="Текст комментария" required></textarea>
-                <input type="submit" value="Отправить">
-            </form>
-        </div>
 
-    </div>
-
-    <script src="../libs/form.js"></script>
 
 </body>
 
