--- a/pages/news_4.html
+++ b/pages/news_4.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости</title>
+    <title>Открыта запись на первые бесплатные курсы в рамках инициативы “Быхов-инновационный”</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/education.css">
-    <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/news_no_img.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -54,97 +53,53 @@
 </aside>
 
 <main id="mainCont">
-   
-    <section class="sec1"> 
-        <div>
-        <h1>Новости</h1>
-         <img id="vline1" src="../img/line1.svg" alt="">
+    <section class="news_no_img">
+        <div class="news_no_img__title">
+                <h1>Открыта запись на первые бесплатные курсы в рамках инициативы “Быхов-инновационный”</h1>
+            <img id="vline1" src="../img/line1.svg" alt="">
         </div>
-        
-    </section>
-
-     <!-- 2 -->
-    <section class="content content__link">
-        <a href="you_can_work_in_it.html">
-        <div class="content__img">
-            <img src="../img/page_news/content_img-3.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>16.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>Ты можешь работать в IT</h3>
-            </div>
-            <div class="content__contents">
+            <div class="news_no_img__content">
                 <p>
-                    Научим новым профессиям Бесплатно, в режиме online, 23 и 25 апреля
-Невероятно крутые преподаватели-практики.
-                </p>
-                <p>
-                    Количество мест ограничено!
+                    «Основы разработки Web-приложений» является базовым курсом для каждого, кто решил реализовать себя в IT. По итогам обучения будут получены навыки самостоятельного создания стандартных web-сайтов и управления их контентом. Также этот курс служит платформой для изучения современного front-end и любого из языков программирования.
                 </p>
             </div>
-        </div>
+            <div class="news_no_img__tabl">
+                <table>
+                    <tr>
+                      <th>Старт занятий:</th>
+                      <td>8 марта</td>
+                    </tr>
+                    <tr>
+                      <th>График:</th>
+                      <td>среда, пятница (19:00 - 22:00)</td>
+                    </tr>
+                    <tr>
+                      <th>Количество занятий:</th>
+                      <td>18</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="news_no_img__address">
+                <img src="../img/addr.svg" alt="icon_address">
+                <p>Быхов, ул. Краснознаменная, 65</p>
+            </div>
+            <div class="news_no_img__list">
+                <h2>Вы хотите в IT, но не знаете с чего начать и какое направление выбрать?</h2>
+                <h2>Хотите помочь своим детям получить перспективную профессию?</h2>
+                <ul>
+                    <li>Раскрыть все секреты и помочь определиться с выбором поможет курс “Гид по IT-профессиям”.</li>
+                    <li>Записывайтесь, будет интересно!</li>
+                    <li>ВНИМАНИЕ! Количество мест ограничено!</li>
+                </ul>
+            </div>
+            <div class="news_no_img__button">
+                <a href="guide_to_it.html"><button class="button">Подробнее о курсе</button></a>
+            </div>
+        <a href="news.html">
+            <img src="../img/left-arrow10.svg" alt="row-left">
+            <span>назад к списку новостей</span>
         </a>
     </section>
-
-    <section class="content content__link">
-        <a href="23-25_first_free_courses.html">
-        <div class="content__img">
-            <img src="../img/23-25_news.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>12.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>23 и 25 апреля стартуют первые бесплатные курсы в рамках инициативы “Быхов-инновационный”.</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Несмотря на контролируемую ситуацию по распространению коронавируса в Беларуси, мы решили организовать первый бесплатный курс “Гид по IT-профессиям” в формате дистанционного обучения.
-                </p>
-            </div>
-        </div>
-    </a>
-    </section>
-
-
-    <!-- 3 -->
-    <section class="content content__link">
-        <a href="news_business_incubator.html">
-        <div class="content__img">
-            <img src="../img/news_business_incubator.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>27.12.2019</span>
-            </div>
-            <div class="content__title">
-                <h3>В Быхове стартовала инициатива по созданию бизнес-инкубатора.</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Информационно-просветительское учреждение в сфере предпринимательства «Центр поддержки и развития частных бизнес-инициатив» стало победителем в конкурсе, который был объявлен в рамках проекта ЕС-ПРООН «Поддержка экономического развития на местном уровне в Республике Беларусь».
-                </p>
-            </div>
-        </div>
-        </a>
-    </section>
-
-
-
-    <section class="much_news">
-        <a href="#!">
-            <div class="much_news__title">
-                <h2>Больше новостей! Еще больше!</h2>
-            </div>
-            <div class="much_news__row">&darr;</div>
-        </a> 
-    </section>
-
-
 </main>
 <footer id="foot0">
     <div id="foot1">
@@ -186,7 +141,7 @@ function res() {
      for (i=0; i<box.length; i++) {
          let hi1, hi = h/6-85;
 
-        if (hi < 55) { hi1 = 50 }        
+        if (hi < 55) { hi1 = 55 }        
         else if (h > 1400) { hi1 = 263 }
         else { hi1= hi }
 
@@ -199,8 +154,8 @@ function res() {
          foot0.style.marginLeft = '60px';
          foot1.style.width = '220px';
          foot2.style.marginLeft = '0';
-        //  f1.style.width = '54%';
-        //  f2.style.width = '23%';
+        // f1.style.width = '54%';
+        // f2.style.width = '23%';
         
     }
         else {
