--- a/pages/coding_java.html
+++ b/pages/coding_java.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Язык программирования Java</title>
+    <title>Обучение</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -59,7 +59,7 @@
    
 <section class="sect1"> 
 
-    <h1>Язык программирования Java</h1>
+    <h1>Курс «Программирование на Java»</h1>
 
      <div>
         <div class="cont">
@@ -67,7 +67,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                Java-разработчик - это специалист, который создает комплексные приложения, используя одноименный язык программирования. Java широко используется на сайтах электронной коммерции, в различных корпоративных информационных системах. Java является ведущим языком разработки приложений под ОС Android и используется во встраиваемых системах.
+                Кто такой Java-разработчик? Специалист, который создает комплексные приложения, используя одноименный язык программирования. Java широко используется на сайтах электронной коммерции, в различных корпоративных информационных системах. Java является ведущим языком разработки приложений под ОС Android и используется во встраиваемых системах.
             </p></div>
         </div>
 
