--- a/pages/coding_php.html
+++ b/pages/coding_php.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Язык программирования PHP</title>
+    <title>Обучение</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -59,7 +59,7 @@
    
 <section class="sect1"> 
 
-    <h1>Язык программирования PHP</h1>
+    <h1>Курс «Программирование на PHP»</h1>
 
      <div>
         <div class="cont">
@@ -67,7 +67,7 @@
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
             <div><p>
-                PHP-разработчик - это специалист, который занимается разработкой сайтов на языке программирования, созданном специально для этой цели. В обязанности PHP-разработчика входит написание программного кода, создание и доработка дополнительных модулей, отладка и исправление ошибок в коде скриптов. От качества работы PHP-разработчика зависит скорость, надежность, функционирование и успешное развитие веб-сайта в целом.
+                Кто такой PHP-разработчик? Специалист, который занимается разработкой сайтов на языке программирования, созданном специально для этой цели. В обязанности PHP-разработчика входит написание программного кода, создание и доработка дополнительных модулей, отладка и исправление ошибок в коде скриптов. От качества работы PHP-разработчика зависит скорость, надежность, функционирование и успешное развитие веб-сайта в целом.
             </p></div>
         </div>
 
