--- a/pages/front-end.html
+++ b/pages/front-end.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>«Front-End»</title>
+    <title>Обучение</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -59,7 +59,7 @@
    
 <section class="sect1"> 
 
-    <h1>«Front-End»</h1>
+    <h1>«Современный Front-End c использованием JavaScript и HTML5»</h1>
 
      <div>
         <div class="cont">
