--- a/pages/guide_to_it.html
+++ b/pages/guide_to_it.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гид по IT-профессиям</title>
+    <title>Обучение</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -72,12 +72,10 @@
                     </div>
                     <div><img src="../img/page_web_app/line11.svg" alt=""></div>
                     <div>
-                        <p>
-                            Данный курс подойдет всем, кто:
-                            Хочет в IT, но не знает с чего начать.
-                            Желает развиваться в IT, но сомневается между несколькими направлениями.
-                            Является родителем и хочет помочь своему ребенку определиться с будущей профессией в IT.
-                        </p>
+                        <p>Данный курс подойдет всем, кто: <br>
+                            Хочет в IT, но не знает с чего начать.<br>
+                            Желает развиваться в IT, но сомневается между несколькими направлениями.<br>
+                            Является родителем и хочет помочь своему ребенку определиться с будущей профессией в IT.</p>
                     </div>
                 </div>
 
@@ -129,7 +127,7 @@
 
             <div class="grid">
                 <a name="co">
-                    <h2>Программа курса «Гид по IT-профессиям»</h2>
+                    <h2>Программа курса</h2>
                 </a>
                 <div id="course" class="js-ui-accordion"></div>
 
