--- a/pages/incubator.html
+++ b/pages/incubator.html
@@ -123,7 +123,7 @@
                 </a>
                 <div id="addr1">
                     <img src="../img/addr.svg" alt="">
-                    <span>Быхов, ул. Краснознаменная, 65</span>
+                    <span>г. Быхов, ул. Советская., 2А</span>
                 </div>
             </div>
 
@@ -138,15 +138,15 @@
                     <div id="m4">
                         <div>
                             <h3> Консультация юристов</h3>
-                            <span>В рамках inby наши адвокаты оказывают правовую помощь населению по различным вопросам,
-                                в том числе уголовную правовую помощь, правовую помощь по гражданским и семейным делам и
-                                т.п.</span>
+                            <span>В рамках бизнес-инкубатора наши адвокаты оказывают бесплатную юридическую помощь по
+                                вопросам открытия и сопровождения бизнеса, проконсультируют по выбору формы
+                                собственности и особенностям дальнейшей деятельности..</span>
                         </div>
                         <div>
                             <h3>Консультация бухгалтеров</h3>
-                            <span>В рамках inby наши адвокаты оказывают правовую помощь населению по различным вопросам,
-                                в том числе уголовную правовую помощь, правовую помощь по гражданским и семейным делам и
-                                т.п.</span>
+                            <span>В рамках бизнес-инкубатора наши бухгалтера проведут бесплатные консультации по
+                                вопросам бухгалтерского учета, посоветуют с выбором формы собственности и нюансами в
+                                дальнейшей деятельности.</span>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
             <div class='tel' id="tel0">
                 <div><img src="../img/tel.svg" alt=""></div>
                 <div>Запись по телефону
-                    <span>+375 17 333 45 67</span></div>
+                    <span>+37529-758-67-33</span></div>
             </div>
         </section>
 
@@ -184,16 +184,13 @@
         </section>
 
         <section class="sec1">
-            <img id="sld1" src="../img/slider1.jpg" alt="">
+            <img id="sld1" src="../img/slider2.jpg" alt="">
             <!-- <img id="arr_left" src="../img/arr_left.svg" alt="">
     <img id="arr_right" src="../img/arr_right.svg" alt=""> -->
         </section>
 
         <section class="sec1">
-            <p id="sld_p">
-                В нашем коворкинге есть все, что нужно для работы, абсолютно бесплатно: высокоскоростной интернет,
-                рабочее место, чай и печеньки.
-            </p>
+            <p id="sld_p"></p>
         </section>
 
 
@@ -204,15 +201,18 @@
                 <h2>Коворкинг</h2>
                 <p>
                     Коворкинг – пространство для общения и работы, где вы можете воплотить свои идеи. Вы можете не
-                    только работать, но и проводить деловые мероприятия, мастер-классы и обучение.
+                    только работать, но и проводить деловые мероприятия, мастер-классы и обучение. <br>
+                    В нашем коворкинге есть все, что нужно для работы, абсолютно бесплатно: высокоскоростной интернет,
+                    рабочее место, чай и печеньки.
                 </p>
-                <p id="p1">Коворкинг располагается по адресу: Советская ул., 2А, Быхов <br>
+                <p id="p1">Коворкинг располагается по адресу: Советская ул., 2А, Быхов
+                    <br>
                     Время работы: пн-пт 9:00–18:00; сб 9:00–13:50
                 </p>
                 <div class='tel' id="tel1">
                     <div><img src="../img/tel.svg" alt=""></div>
                     <div>Запись по телефону
-                        <span>+375 17 333 45 67</span></div>
+                        <span>+37529-758-67-33</span></div>
                 </div>
             </div>
             <div class="m3_b" onclick="forma()">
