--- a/pages/news.html
+++ b/pages/news.html
@@ -136,7 +136,7 @@
 
 
     <section class="much_news">
-        <a href="#!">
+        <a href="news_no_img.html">
             <div class="much_news__title">
                 <h2>Больше новостей! Еще больше!</h2>
             </div>
