--- a/pages/web_app.html
+++ b/pages/web_app.html
@@ -61,14 +61,15 @@
    
 <section class="sect1"> 
 
-    <h1>Основы Web</h1>
+    <h1>Основы разработки Web-приложений</h1>
 
      <div>
         <div class="cont">
             <div><img src="../img/page_web_app/almaz.png" alt=""> <p> Владимир Минский
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
-            <div><p>Web-разработчик  - это специалист, создающий сайты и приложения для Web (например, системы интернет-банкинга, службы заказов билетов, и многое другое). Может отвечать как только за серверную или браузерную часть сайта, так и за обе эти составляющих.</p></div>
+            <div><p>Кто такой web-разработчик? Специалист, создающий сайты и приложения для Web (например, системы интернет-банкинга, службы заказов билетов, и многое другое). Может отвечать как только за серверную или браузерную часть
+                сайта, так и за обе эти составляющих.</p></div>
         </div>
 
         <div class="cont1">
@@ -96,13 +97,13 @@
 
 
 <section class="sec-1">
-    <h2>В ходе курса вы:</h2>
+    <h2>Вы научитесь</h2>
     <ul>
-        <li>Познакомитесь с основами создания Web-страниц при помощи HTML и CSS.</li>
-        <li>Узнаете, как делать формы для ввода данных и таблицы на Web-страницах.</li>
-        <li>Получите навыки работы в востребованных приложениях Adobe Dreamweaver, Adobe Photoshop, Adobe Illustrator.</li>
-        <li>Научитесь писать сценарии на языке JavaScript.</li>
-        <li>Сможете программно управлять элементами Web-страницы, устанавливать и настраивать Web-сервер.</li>
+        <li>Основами создания Web-страниц при помощи HTML и CSS.</li>
+        <li>Как делать формы для ввода данных и таблицы на Web-страницах.</li>
+        <li>Навыкам работы в востребованных приложениях Adobe Dreamweaver, Adobe Photoshop, Adobe Illustrator.</li>
+        <li>Написанию сценарии на языке JavaScript.</li>
+        <li>Управлению элементами Web-страницы, устанавливать и настраивать Web-сервер.</li>
     </ul>
 </section>
 
