--- a/pages/events.html
+++ b/pages/events.html
@@ -70,14 +70,14 @@
             <div class="header__container">
                 <div class="header__content">
                     <div class="header__date">
-                        23-24 апреля
+                        1 апреля
                     </div>
                     <div class="header__cont">
-                        <h3>Стартует 1 набор курса «Гид по IT-профессиям».</h3>
+                        <h3>Стартует 1 набор курса "Удаленная работа или как зарабатывать, не выходя из дома".</h3>
                         <p>
-                            На курсе Вы узнаете много нового о сфере IT, а также важный секрет - в IT есть не только
-                            программисты!
-                            Для обучения вам понадобится лишь компьютер с выходом в интернет и регистрация на курс.
+                            Развитие IT-технологий определяет профессии будущего, поэтому даже в кризис специалисты на
+                            удаленной работе не сидят без дела. И сейчас самое время научиться использовать современные
+                            технологии и начать на этом зарабатывать.
                         </p>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                     <div class="events__content">
                         <img src="../img/page_events/address.svg" alt="">
                         <div class="events__addr">
-                            <p>Быхов,</p>
-                            <p>ул. Краснознаменная, 65</p>
+                            <p>г.Быхов,</p>
+                            <p>ул. Советская., 2А</p>
                         </div>
                         <h2>Самые интересные события Быхова</h2>
                         <p>Финансирование осуществляется за счет программ ПРОООН</p>
