--- a/pages/it_jurist.html
+++ b/pages/it_jurist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT-Юрист</title>
+    <title>Обучение</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
@@ -59,14 +59,15 @@
    
 <section class="sect1"> 
 
-    <h1>«IT-Юрист»</h1>
+    <h1>Курс «IT-Юрист»</h1>
 
      <div>
         <div class="cont">
             <div><img src="../img/page_web_app/almaz.png" alt=""> <p> Владимир Минский
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
-            <div><p>Курс для тех, кто хочет, не меняя профессию юриста, работать в сфере IT</p></div>
+            <div><p>Этот курс позволит всем желающим понять бессмысленность создания прекрасного в мире, где есть маркетологи, которые точно знают, как продать страхоту и заработать на этом много денег.
+                Присоединяйтесь к нам и мы увеличим бесполезное, наплевав на здравый смысл!</p></div>
         </div>
 
         <div class="cont1">
@@ -94,7 +95,7 @@
 
 
 <section class="sec-1">
-    <h2>В ходе курса вы узнаете:</h2>
+    <h2>В ХОДЕ КУРСА ВЫ УЗНАЕТЕ</h2>
     <ul>
         <li>Особенности работы юриста в IT- компании;</li>
         <li>Как правильно внедрить в компании частный блокчейн-проект, какими нормами права необходимо руководствоваться;</li>
