--- a/pages/web_design.html
+++ b/pages/web_design.html
@@ -223,7 +223,7 @@
 
     <script src="../libs/app.js"></script>
 
-    <script src="../libs/it-hr.js"></script>
+    <script src="../libs/web_design.js"></script>
     <!-- Для гармошки -->
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
