--- a/pages/about.html
+++ b/pages/about.html
@@ -83,7 +83,7 @@
         <section class="sec1">
             <div>
                 <h2>Цель инициативы</h2>
-                <p class="b">«Быхов инновационный»: создать благоприятные условия для развития Быховского района путем
+                <p class="b">Цель инициативы «Быхов инновационный»: создать благоприятные условия для развития Быховского района путем
                     поддержки экономической инициативы населения, способствовать развитию бизнеса, стартапов и
                     инновационных компаний.</p>
             </div>
@@ -94,9 +94,9 @@
                 <h2>Наши партнеры</h2>
             </div>
             <div id="part">
-                <div><img src="../img/lg2.svg" alt=""></div>
+                <div><img src="../img/akbelhard.png" alt=""></div>
                 <div><img src="../img/lg3.svg" alt=""></div>
-                <div><img src="../img/lg4.svg" alt=""></div>
+                <div><img src="../img/advokat.jpg" alt=""></div>
             </div>
 
         </section>
