--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -86,7 +86,7 @@
         </section>
         <section class="map">
             <iframe class="map__address"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9487.59958226778!2d30.222702930851536!3d53.5238446531571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d11ceab6cf03c9%3A0x190844a5f36c5073!2z0JHRi9GF0L7Qsg!5e0!3m2!1sru!2sby!4v1586648258292!5m2!1sru!2sby"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.3722398042796!2d30.252749674790866!3d53.520361526885885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d11b6423ef4a41%3A0xcf0fe5f1e304897c!2z0YPQuy4g0KHQvtCy0LXRgtGB0LrQsNGPIDIsINCR0YvRhdC-0LI!5e0!3m2!1sru!2sby!4v1589563994281!5m2!1sru!2sby"
                 width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0"></iframe>
         </section>
