--- a/pages/news.html
+++ b/pages/news.html
@@ -205,7 +205,7 @@
         </section>
 
         <section class="much_news">
-            <a href="news_no_img.html">
+            <a href="#!">
                 <div class="much_news__title">
                     <h2>Больше новостей! Еще больше!</h2>
                 </div>
