--- a/pages/incubator.html
+++ b/pages/incubator.html
@@ -183,7 +183,7 @@
             </div>
         </section>
 
-        <section class="sec1">
+        <section class="sec1 sld">
             <img id="sld1" src="../img/slider2.jpg" alt="">
             <!-- <img id="arr_left" src="../img/arr_left.svg" alt="">
     <img id="arr_right" src="../img/arr_right.svg" alt=""> -->
@@ -258,6 +258,12 @@
 
     </main>
     <footer id="foot0">
+        <div class="social mobsocial">
+            <a href="#"><img src="../img/s1.svg" alt=""></a>
+            <a href="#"><img src="../img/s2.svg" alt=""></a>
+            <a href="#"><img src="../img/s3.svg" alt=""></a>
+            <a href="#"><img src="../img/s4.svg" alt=""></a>
+        </div>
         <div id="foot1">
             <a href="about.html">О нас</a> |
             <a href="#">О проекте</a>
@@ -358,6 +364,17 @@
 
 
             }
+            if (w<770) { 
+                foot0.style.marginLeft = '15px';
+            }
+
+            if (w<600) { 
+                foot0.style.marginLeft = '0px';
+                foot2.style.marginLeft = '15px';
+                f1.style.width = '276px';
+                f2.style.width = '219px';
+            }
+
 
             // console.log(`w: ${w}, h: ${h}`)    
 
@@ -370,6 +387,8 @@
                 } else {
                     pw = w - 180
                 }
+                if (w<600) {pw = w - 230 }
+
                 let ph = h / 2 - 100
 
                 if (pageYOffset > h / 3) {
