--- a/pages/news_4.html
+++ b/pages/news_4.html
@@ -108,6 +108,12 @@
         </section>
     </main>
     <footer id="foot0">
+        <div class="social mobsocial">
+            <a href="#"><img src="../img/s1.svg" alt=""></a>
+            <a href="#"><img src="../img/s2.svg" alt=""></a>
+            <a href="#"><img src="../img/s3.svg" alt=""></a>
+            <a href="#"><img src="../img/s4.svg" alt=""></a>
+        </div>
         <div id="foot1">
             <a href="about.html">О нас</a> |
             <a href="#">О проекте</a>
@@ -179,6 +185,15 @@
 
             }
 
+            if (w<770) { 
+                foot0.style.marginLeft = '15px';
+            }
+
+            if (w<600) { 
+                foot0.style.marginLeft = '0px';
+                foot2.style.marginLeft = '15px';
+            }
+
             // console.log(`w: ${w}, h: ${h}`)    
 
             function scrl() {
@@ -190,6 +205,8 @@
                 } else {
                     pw = w - 180
                 }
+                if (w<600) {pw = w - 230 }
+
                 let ph = h / 2 - 100
 
                 if (pageYOffset > h / 3) {
